--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>Login</h2>
+    <h2>Send password reset link</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Login" />
-        <input type="hidden" name="next" value="{% url 'dashboard' %}" />
+        <input type="submit" value="Send Reset Link" />
     </form>
     <p>
-        <a href="{% url 'password_reset' %}">Forgot your password?</a>
         <a href="{% url 'dashboard' %}">Back to dashboard</a>
     </p>
 {% endblock content %}
